--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>React App</title>
   </head>
   <body>
-  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
     <input type="hidden" name="form-name" value="contact" />
     <input type="text" name="name"/>
     <input type="email" name="email"/>
