--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
   <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
-    <input type="hidden" name="form-name" value="Contact" />
+    <input type="hidden" name="form-name" value="contact" />
     <input type="text" name="name"/>
     <input type="email" name="email"/>
     <textarea  name="message"></textarea>
