--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://use.fontawesome.com/e6873e3610.js"></script>
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>AleksanderKrys</title>
   </head>
